--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "passport": "^0.5.3",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
