--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.7",
+    "nodemailer-express-handlebars": "^6.1.0",
     "passport": "^0.5.3",
     "passport-google-oauth2": "^0.2.0"
   }
