--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,17 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.3",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-paper": "^4.12.6",
+    "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.0.4",
-    "react-router-native": "^6.21.1"
+    "react-router-native": "^6.21.1",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
