--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.3",
     "expo": "~49.0.15",
+    "expo-document-picker": "~11.5.4",
     "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-document-picker": "^9.1.0",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "4.6.3",
