--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -20,6 +21,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-document-picker": "^9.1.0",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-pager-view": "6.2.0",
@@ -31,8 +33,7 @@
     "react-router-native": "^6.21.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
-    "socket.io-client": "^4.7.3",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "socket.io-client": "^4.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
