--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,11 @@
     "react-native": "0.72.6",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-document-picker": "^9.1.0",
+    "react-native-gesture-handler": "^2.14.1",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.11.4",
+    "react-native-paper-dates": "^0.21.7",
     "react-native-safe-area-context": "4.6.3",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
