--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "expo-document-picker": "~11.5.4",
     "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-country-picker-modal": "^2.0.0",
