--- a/admin/package.json
+++ b/admin/package.json
@@ -17,7 +17,8 @@
     "@mui/x-data-grid": "^6.19.1",
     "axios": "^1.6.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
