--- a/admin/package.json
+++ b/admin/package.json
@@ -18,7 +18,9 @@
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.21.3",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
