--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.3",
+    "dotenv": "^16.4.1",
     "expo": "~49.0.15",
     "expo-document-picker": "~11.5.4",
     "expo-image-picker": "^14.5.0",
