--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +13,14 @@
     "@google/generative-ai": "^0.1.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "chai": "^5.0.3",
+    "chai-http": "^4.4.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.6.0",
     "mongoose": "^8.0.3",
@@ -28,6 +31,11 @@
     "passport": "^0.5.3",
     "passport-google-oauth2": "^0.2.0",
     "pdf-parse": "^1.1.1",
-    "socket.io": "^4.7.3"
+    "socket.io": "^4.7.3",
+    "supertest": "^6.3.4"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@shelf/jest-mongodb": "^4.2.0"
   }
 }
